# ESP-IDF-Projects

./: .gitignore  README.md
ESP-IDF-CPP/1_HelloWorld/: CMakeLists.txt
ESP-IDF-CPP/1_HelloWorld/core/: CMakeLists.txt
ESP-IDF-CPP/1_HelloWorld/core/inc/: main.h
ESP-IDF-CPP/1_HelloWorld/core/src/: main.cpp
ESP-IDF-CPP/2_Blinky/: CMakeLists.txt
ESP-IDF-CPP/2_Blinky/application/Gpio/: Gpio.cpp
ESP-IDF-CPP/2_Blinky/core/inc/: main.h
ESP-IDF-CPP/2_Blinky/core/src/: main.cpp
ESP-IDF-CPP/3_Wifi/application/Wifi/: Wifi.cpp  Wifi.h
ESP-IDF-CPP/3_Wifi/core/: CMakeLists.txt
ESP-IDF-CPP/4_Wifi_RTOS/: CMakeLists.txt
ESP-IDF-CPP/4_Wifi_RTOS/application/Gpio/: Gpio.h
ESP-IDF-CPP/4_Wifi_RTOS/application/Wifi/: CMakeLists.txt  Wifi.cpp  Wifi.h
ESP-IDF-CPP/4_Wifi_RTOS/core/inc/: main.h
ESP-IDF-CPP/5_Wifi_init/application/Gpio/: CMakeLists.txt
ESP-IDF-CPP/5_Wifi_init/application/Wifi/: Wifi.cpp  Wifi.h
ESP-IDF-CPP/6_Wifi_Getting_IP/: CMakeLists.txt  Makefile
ESP-IDF-CPP/6_Wifi_Getting_IP/application/Nvs32/: CMakeLists.txt  Nvs32.h
ESP-IDF-CPP/6_Wifi_Getting_IP/core/: CMakeLists.txt
ESP-IDF-CPP/6_example/station/: sdkconfig  sdkconfig.old
ESP-IDF-CPP/z_trying_lock/: a.out  mian.cpp
ESP-IDF_IoT_Projects/: README.md
ESP-IDF_IoT_Projects/1_HelloWorld/: CMakeLists.txt  sdkconfig.old
ESP-IDF_IoT_Projects/1_HelloWorld/main/: main.cpp
ESP-IDF_IoT_Projects/2_BlinkingLeds/main/: CMakeLists.txt  led.c  led.h  main.c
ESP-IDF_IoT_Projects/3_wifi_Init/: CMakeLists.txt  Makefile
ESP-IDF_IoT_Projects/3_wifi_Init/main/: CMakeLists.txt  wifi_app.c
(+9 files in other folders)
